# quantflow

./: .env  README.md  devlog.md  docker-compose.yml  manage.py
backend/: .env.example  .gitignore  debug_run.py  pyproject.toml  run_debug.py
backend/app/: main.py
backend/app/api/: data_tables.py
backend/app/core/: config.py
backend/app/db/: base_class.py  ddl_generator.py  session.py
backend/app/models/: data_table.py
backend/app/schemas/: data_table.py
backend/tests/: conftest.py  test_api_data_tables.py  test_data_models.py  test_db.py  test_main.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/tracks/migrate_data_model_20251228/: backend_resources.md  metadata.json  plan.md  spec.md
conductor/tracks/ui_refactor_20251228/: plan.md
frontend/: dify-colors.js  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  dify-theme.css  index.css  main.tsx
frontend/src/components/: CategoryManagerModal.jsx  DataTableEditor.jsx  DataTableList.jsx  LanguageSwitcher.jsx  Modal.jsx
frontend/src/components/ui/: LegacySelect.jsx  Select.jsx
frontend/src/config/: index.ts
frontend/src/contexts/: ThemeContext.jsx
frontend/src/hooks/: useWebSocket.js
frontend/src/i18n-config/: i18next-config.ts  index.ts
frontend/src/i18n/en-US/: easyquant.ts  workflow.ts
frontend/src/services/: api.js
frontend/src/styles/: design-tokens.css
frontend/src/themes/: dark.css  light.css  manual-dark.css  manual-light.css
logs/: services.pid
(+16 files in other folders)
